crm-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: crm
    release: crm
  name: crm-api
  namespace: crm
spec:
  replicas: 1
  strategy: {}
  template:
    spec:
      containers:
      - image: registry.gitlab.com/steffbeckers/crm/api
        name: crm-api
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: crm
    release: crm
  name: crm-api
  namespace: crm
spec:
  selector:
    app: crm
  ports:
  - name: "80"
    port: 80
    targetPort: 80
