crm-mssql-service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-mssql
  namespace: crm
spec:
  type: ExternalName
  externalName: mssql-mssql-linux.mssql.svc.cluster.local
