crm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crm-ingress
  namespace: crm
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: crm.steffbeckers.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: crm-app
          servicePort: 80
      - path: /api
        backend:
          serviceName: crm-api
          servicePort: 80
  tls:
  - hosts:
    - crm.steffbeckers.eu
    secretName: steffbeckers.eu-tls
